# AmazonCostOptimizerDashBoard

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  about-me.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/pages/: 2_Services.py
dashboard/utils/: aws_client.py
lambda_/: cost_explorer.py  services_inventory.py
